
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

------------------------------------------------------------------------
 VERSION 0.7.x
------------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.7.x

New Keywords:
- add_input_text:               Added "tab_input" keyword
- add_input_int:                Added "min_value" keyword
- add_input_int:                Added "max_value" keyword
- add_input_int:                Added "clamped" keyword

Breaking Changes:
- get_thread_count:                removed command
- get_threadpool_timeout:          removed command
- is_threadpool_high_performance:  removed command
- run_async_function:              removed command
- set_thread_count:                removed command
- set_threadpool_high_performance: removed command
- set_threadpool_timeout:          removed command

Fixes:
- add_text_point: fixed issue where the y value was incorrect #450
- delete_row:     fixed issue where row 0 couldn't be deleted #421
- get_item_label: fixed issue where internal label was returned #428
- logger:         fixed issue where logs didn't show up occasionally
- plot:           fixed issue where plot ignored label #435

------------------------------------------------------------------------
 VERSION 0.6.117
------------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.117

Updates:
- glfw:              updated to 3.3.2
- implot:            updated to 0.9 WIP a9d3347

New Keywords:
- plot:               Added "equal_aspects" keyword #305

Breaking Changes:
- popup keyword:     removed unused popup keyword
- set_item_popup:    removed command
- get_item_popup:    removed command

Fixes:
- start_dearpygui:   can be called more than once now