@@ -30,6 +30,9 @@ namespace Marvel {
         ImGui::Separator();
         ImGui::TextColored(ImGui::GetStyleColorVec4(ImGuiCol_PlotHistogramHovered), "Partners");
         ImGui::BulletText("Dean Keinan");
+        ImGui::BulletText("He Lingfeng");
+        ImGui::BulletText("Nikki Luzader");
+        ImGui::BulletText("Tkachenko Igor");
         ImGui::Separator();
         ImGui::TextColored(ImGui::GetStyleColorVec4(ImGuiCol_PlotHistogramHovered), "ImPlot");
         ImGui::Text("ImPlot Author Evan Pezent.");
