@@ -18,6 +18,15 @@ namespace Marvel {
 			{mvPythonDataType::Float, "width"},
 		}, "Sets the width of the ith column.", "None", "Widget Commands") });
 
+		parsers->insert({ "get_item_callback_data", mvPythonParser({
+			{mvPythonDataType::String, "item"}
+		}, "Returns an item' callback data", "Any", "Widget Commands") });
+
+		parsers->insert({ "set_item_callback_data", mvPythonParser({
+			{mvPythonDataType::String, "item"},
+			{mvPythonDataType::Object, "callback_data", "Callback data", "None"},
+		}, "Sets an item's callback data if applicable.", "None", "Widget Commands") });
+
 		parsers->insert({ "move_item", mvPythonParser({
 			{mvPythonDataType::String, "item"},
 			{mvPythonDataType::KeywordOnly},
@@ -829,5 +838,48 @@ namespace Marvel {
 			return GetPyNone();
 
 		return ToPyString(item->getStringType());
+	}
+
+	PyObject* get_item_callback_data(PyObject* self, PyObject* args, PyObject* kwargs)
+	{
+		const char* item;
+
+		if (!(*mvApp::GetApp()->getParsers())["get_item_callback_data"].parse(args, kwargs, __FUNCTION__, &item))
+			return GetPyNone();
+
+		auto appitem = mvApp::GetApp()->getItemRegistry().getItem(item);
+
+		if (appitem)
+		{
+			PyObject* callback = appitem->getCallbackData();
+			if (callback)
+			{
+				Py_XINCREF(callback);
+				return callback;
+			}
+
+		}
+
+		return GetPyNone();
+	}
+
+	PyObject* set_item_callback_data(PyObject* self, PyObject* args, PyObject* kwargs)
+	{
+		PyObject* data;
+		const char* item;
+
+		if (!(*mvApp::GetApp()->getParsers())["set_item_callback_data"].parse(args, kwargs, __FUNCTION__, &item, &data))
+			return GetPyNone();
+
+		auto appitem = mvApp::GetApp()->getItemRegistry().getItem(item);
+
+		if (appitem)
+		{
+			if (appitem->getCallbackData() != data)
+				Py_XINCREF(data);
+			appitem->setCallbackData(data);
+		}
+
+		return GetPyNone();
 	}
 }
